# lyrics_helper_rs

./: .gitignore  Cargo.toml  build.rs  readme.md
.cargo/: audit.toml
benches/: decryption_benchmark.rs  ttml_parser_benchmark.rs
docs/: ttml-specification-en.md  ttml-specification.md
examples/: demo.rs
src/: config.rs  error.rs  lib.rs  wasm.rs
src/converter/: mod.rs  types.rs  utils.rs
src/converter/generators/: apple_music_json_generator.rs  ass_generator.rs  enhanced_lrc_generator.rs  krc_generator.rs  lqe_generator.rs  lrc_generator.rs  lyricify_lines_generator.rs  lys_generator.rs  mod.rs  qrc_generator.rs  spl_generator.rs  ttml_generator.rs  yrc_generator.rs
src/converter/parsers/: apple_music_json_parser.rs  ass_parser.rs  enhanced_lrc_parser.rs  krc_parser.rs  lqe_parser.rs  lrc_parser.rs  lyricify_lines_parser.rs  lys_parser.rs  mod.rs  musixmatch_parser.rs  qrc_parser.rs  spl_parser.rs  ttml_parser.rs  yrc_parser.rs
src/converter/processors/: agent_recognizer.rs  batch_processor.rs  chinese_conversion_processor.rs  metadata_processor.rs  metadata_stripper.rs  mod.rs  syllable_smoothing.rs
src/model/: generic.rs  match_type.rs  mod.rs  track.rs
src/providers/: mod.rs
src/providers/amll_ttml_database/: mod.rs  types.rs
src/search/: matcher.rs  mod.rs
tests/: ttml_generation_integration_tests.rs  ttml_parser_integration_tests.rs
tests/snapshots/: ttml_generation_integration_tests__auto_word_splitting_snapshot.snap  ttml_generation_integration_tests__generate_line_timed_snapshot.snap  ttml_generation_integration_tests__generate_timed_romanization_snapshot.snap  ttml_generation_integration_tests__generate_timed_translation_snapshot.snap  ttml_generation_integration_tests__generate_word_timed_with_agents_snapshot.snap  ttml_parser_integration_tests__complex_round_trip.snap  ttml_parser_integration_tests__round_trip.snap
tests/test_data/: background_vocals.ttml  complex_round_trip.ttml  full_metadata.ttml  invalid_xml.ttml  invalid_xml.xml  line_timed_basic.ttml  main.qrc  malformed_but_recoverable.ttml  word_timed_basic.ttml
(+14 files in other folders)
